--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,15 +13,15 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+    --custom-green: #13C53E;
+    --custom-purple: #850C7C;
+    --custom-violet: #442256;
+    --custom-light-color: 255, 61, 177;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
+
+
+@import "./swiperCustom.css"
