--- a/components/Home/sectiontwo.module.css
+++ b/components/Home/sectiontwo.module.css
@@ -16,6 +16,51 @@
     position: relative;
 }
 
+.secCardContainerActive .contentContainer {
+    position: absolute;
+    z-index: 1;
+    height: 100%;
+    width: 45%;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.secCardContainerActive .contentContainer .activeQues {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    color: #442256;
+}
+
+.secCardContainerActive .contentContainer .activeDesp {
+    color: #442256;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: 150%;
+}
+
+.secCardContainerActive .contentContainer .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: capitalize;
+    width: 165px;
+    padding: 10px 30px;
+    background-color: var(--custom-green);
+    border-radius: 65px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 30px;
+    color: white;
+    margin-top: 30px;
+}
+
 .secCardContainerActive .image[fadehere='1'] {
     animation: fadeIn 300ms ease-in-out forwards;
 }
@@ -50,7 +95,7 @@
     position: relative;
 }
 
-.secCard .activeCardBorder{
+.secCard .activeCardBorder {
     border: 1px solid transparent !important;
 }
 
@@ -88,4 +133,18 @@
     line-height: 150%;
     font-size: 20px;
     transition: all 200ms ease-in-out;
+}
+
+.secCard .card .cardparaActive::before {
+    content: "";
+    display: block;
+    position: absolute;
+    left: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-right: 15px solid rgba(var(--custom-light-color), 0.2);
 }
