--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,22 +6,14 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --custom-green: #13C53E;
+  --custom-purple: #850C7C;
+  --custom-violet: #442256;
+  --custom-light-color: 255, 61, 177;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-    --custom-green: #13C53E;
-    --custom-purple: #850C7C;
-    --custom-violet: #442256;
-    --custom-light-color: 255, 61, 177;
-  }
-}
 
-body {
-}
+body {}
 
 
 @import "./swiperCustom.css"
