--- a/components/HeroBannerSlider/herobanner.module.css
+++ b/components/HeroBannerSlider/herobanner.module.css
@@ -15,6 +15,9 @@
 
 .contentWrapper {
     width: 50%;
+    height: 266px;
+    display: grid;
+    grid-template-rows: auto 50px;
 }
 
 .subTitle {
@@ -44,5 +47,5 @@
     font-weight: 700;
     line-height: 30px;
     color: white;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
