--- a/components/SimpleCard/simplecard.module.css
+++ b/components/SimpleCard/simplecard.module.css
@@ -3,6 +3,7 @@
     height: 150px;
     position: relative;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .cardImageSec3 img {
@@ -22,7 +23,7 @@
     padding: 40px 30px;
     flex-direction: column;
     align-items: flex-start;
-    gap: 20px;
+    gap: 18px;
     border-radius: 5px;
     background: #850C7C;
     color: white;
@@ -50,4 +51,38 @@
     background-color: var(--custom-green);
     font-weight: 700;
     line-height: 30px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .simpleCard {
+        flex: 0 0 auto;
+        width: 327px;
+        height: 500px;
+        padding: 40px 16px;
+        display: grid;
+        grid-template-rows: 30px 150px 140px 51px;
+    }
+
+    .simpleCard .title {
+        font-size: 20px;
+    }
+
+    .simpleCard:first-child {
+        margin-left: 23px;
+    }
+
+    .simpleCard:last-child {
+        margin-right: 23px;
+    }
+
+    .simpleCard .simpleCardPara {
+        font-size: 14px;
+        color: rgba(255, 255, 255, 0.8);
+    }
+
+    .cardImageSec3 {
+        width: 297px;
+        height: 150px;
+    }
 }
