--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,8 +12,22 @@
   --custom-light-color: 255, 61, 177;
 }
 
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* outline: 1px solid; */
+}
 
 body {}
+
+.MuiPaper-elevation{
+  border: none !important;
+  box-shadow: none !important;
+}
+
 
 
 @import "./swiperCustom.css"
