--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,3 +1,14 @@
 .homePageMainContainer {
     --sec-2-width: 848px;
 }
+
+@media screen and (max-width: 768px) {
+    .homePageMainContainer {
+        --sec-2-width: 100vw;
+    }
+
+    .cardContainer {
+        justify-content: flex-start;
+        overflow-x: auto;
+    }
+}
